# garmin-bulking-cutting-rates

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  download_weight_data.py  plot.py  process_weight_data.py  pyproject.toml  run.sh
.github/workflows/: run.yml  test.yml
scripts/: columns.py  dataframe_creator.py  download.py  files.py  plot.py  predictions.py  process.py  process_weight_data.py  send.py
tests/: test_process_weight_data.py
