[tool.poetry]
name = "garmin-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "scripts", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
garminconnect = "^0.2.25"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^3.6.2"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
max-line-length=120

[tool.isort]
profile = "black"
